--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ executing==2.2.0
 fastjsonschema==2.21.1
 fonttools==4.56.0
 fqdn==1.5.1
+gdown-5.2.0
 geoviews==1.14.0
 h11==0.14.0
 holoviews==1.20.2
