--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ datashader==0.17.0
 debugpy==1.8.13
 decorator==5.2.1
 defusedxml==0.7.1
+duckdb-1.2.1
 et_xmlfile==2.0.0
 executing==2.2.0
 fastjsonschema==2.21.1
