--- a/requirements.txt
+++ b/requirements.txt
@@ -101,6 +101,7 @@ prompt_toolkit==3.0.50
 psutil==7.0.0
 pure_eval==0.2.3
 py4j==0.10.9.7
+pyarrow-19.0.1
 pycparser==2.22
 pyct==0.5.0
 Pygments==2.19.1
